fix(console): mobile date time spacing

--- a/src/index.css
+++ b/src/index.css
@@ -273,6 +273,10 @@ section:first-child .command {
     display: inline-block;
   }
 
+  .time {
+    padding-left: 1em;
+  }
+
   .talk-title:before {
     content: 'Title: ';
   }
